--- a/Index.html
+++ b/Index.html
@@ -54,8 +54,14 @@
     iframe {
       border: none;
       width: 100%;
-      height: 500px;
+      min-height: 500px;
       border-radius: 8px;
+    }
+    @media (max-width: 768px) {
+      iframe {
+        min-height: 600px;
+        width: 100%;
+      }
     }
     footer {
       background: #111;
@@ -95,7 +101,7 @@
   <section class="form-container">
     <h2>Get More Details</h2>
     <p>Fill in your details below to receive complete information and personal guidance.</p>
-    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSf-form-placeholder/viewform?embedded=true" title="Myle Community Registration Form"></iframe>
+    <iframe aria-label="Let's Work with MYLE Community 🚀" frameborder="0" style="width:100%;border:none;" src="https://forms.mylecommunity.in/myle/form/CopyLetsWorkwithMYLECommunity/formperma/ZlYN-IAQH0qp87lh1672fU_wKykKqtkWMJsEupWEWJQ"></iframe>
   </section>
 
   <section>
