--- a/index.html
+++ b/index.html
@@ -3,20 +3,14 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Myle Community | Work From Home for Students</title>
-  <meta name="description" content="Learn. Work. Grow. Join India’s Fastest-Growing Student Community for Online Work — powered by Myle Community." />
-
-  <!-- Favicon -->
+  <title>Myle Community | Know How Students Are Building Their First Online Income 💡</title>
+  <meta name="description" content="Know How Students Are Building Their First Online Income with Myle Community. Learn, grow and explore genuine online opportunities with guidance and trust." />
   <link rel="icon" href="https://i.ibb.co/27S5hrzd/favicon.png" type="image/png" />
-
-  <!-- Open Graph Meta Tags -->
-  <meta property="og:title" content="Myle Community | Learn. Work. Grow." />
-  <meta property="og:description" content="Join India’s Fastest-Growing Student Community for Online Work — Learn. Work. Grow. with Myle Community." />
+  <meta property="og:title" content="Myle Community | Know How Students Are Building Their First Online Income 💡" />
+  <meta property="og:description" content="Join India's Fastest-Growing Student Community for Online Income Opportunities. Learn, grow and explore genuine digital earning paths." />
   <meta property="og:image" content="https://i.ibb.co/d0GWDs92/logo.png" />
   <meta property="og:url" content="https://mylecommunity.in" />
   <meta name="twitter:card" content="summary_large_image" />
-
-  <!-- Organization Schema -->
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
@@ -38,8 +32,6 @@
     }
   }
   </script>
-
-  <!-- FAQ Schema (conversion-focused) -->
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
@@ -50,7 +42,7 @@
         "name": "What is Myle Community?",
         "acceptedAnswer": {
           "@type": "Answer",
-          "text": "Myle Community is where students discover how digital platforms can help them grow, learn, and explore new‑age online opportunities — in a way that truly makes sense for them."
+          "text": "Myle Community is where students discover how digital platforms can help them grow, learn, and explore new-age online opportunities — in a way that truly makes sense for them."
         }
       },
       {
@@ -88,115 +80,122 @@
     ]
   }
   </script>
-
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap');
     * { box-sizing: border-box; }
-    body {
-      margin: 0;
-      font-family: 'Poppins', sans-serif;
-      background: #fafafa;
-      color: #1e1e1e;
-      scroll-behavior: smooth;
-    }
+    body { margin: 0; font-family: 'Poppins', sans-serif; background: #fafafa; color: #1e1e1e; scroll-behavior: smooth; }
 
-    /* ===== HERO SECTION ===== */
-    header {
-      background: linear-gradient(135deg, #6a11cb 0%, #2575fc 100%);
-      color: #fff;
-      padding: 6rem 2rem 4rem;
-      text-align: center;
-      position: relative;
-      overflow: hidden;
-    }
-    header::before {
-      content: '';
-      position: absolute;
-      top: 0; left: 0; width: 100%; height: 100%;
-      background: url('https://www.svgrepo.com/show/533587/abstract-waves.svg') no-repeat center;
-      background-size: cover;
-      opacity: 0.08;
-      z-index: 0;
-    }
+    header { background: linear-gradient(135deg, #56CCF2, #FF9A8B); color: #fff; padding: 6rem 2rem 4rem; text-align: center; position: relative; overflow: hidden; }
+    header::before { content: ''; position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: url('https://www.svgrepo.com/show/530448/abstract-shapes.svg') no-repeat center; background-size: cover; opacity: 0.08; z-index: 0; }
     header h1 { font-size: 2.5rem; font-weight: 700; margin: 0; position: relative; z-index: 1; }
     header p { margin-top: 1rem; font-size: 1.1rem; opacity: 0.9; position: relative; z-index: 1; }
-    .cta-btn {
-      background: #fff; color: #2575fc; font-weight: 600; border: none;
-      padding: 0.9rem 2rem; border-radius: 30px; font-size: 1rem; cursor: pointer;
-      margin-top: 2rem; position: relative; z-index: 1; transition: all 0.3s ease;
-    }
-    .cta-btn:hover { background: #2575fc; color: #fff; transform: translateY(-3px); }
+    .cta-btn { background: #fff; color: #FF6F61; font-weight: 600; border: none; padding: 0.9rem 2rem; border-radius: 30px; font-size: 1rem; cursor: pointer; margin-top: 2rem; position: relative; z-index: 1; transition: all 0.3s ease; }
+    .cta-btn:hover { background: #FF6F61; color: #fff; transform: scale(1.03); }
 
-    /* ===== BENEFITS ===== */
-    section.benefits {
-      max-width: 1100px; margin: 4rem auto; padding: 0 1.5rem;
-      display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 2rem;
-    }
-    .benefit {
-      background: #fff; padding: 2rem; border-radius: 16px; box-shadow: 0 8px 20px rgba(0,0,0,0.05);
-      text-align: center; transition: transform 0.3s ease;
-    }
+    section.benefits { max-width: 1100px; margin: 4rem auto; padding: 0 1.5rem; display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 2rem; }
+    .benefit { background: #fff; padding: 2rem; border-radius: 16px; box-shadow: 0 8px 20px rgba(0,0,0,0.05); text-align: center; transition: transform 0.3s ease; }
     .benefit:hover { transform: translateY(-5px); }
-    .benefit img { width: 60px; height: 60px; margin-bottom: 1rem; loading: lazy; }
+    .benefit img { width: 60px; height: 60px; margin-bottom: 1rem; }
 
-    /* ===== FORM SECTION ===== */
-    section.form-section { text-align: center; padding: 4rem 1rem; background: linear-gradient(180deg, #eef2ff 0%, #f9f9ff 100%); }
-    section.form-section h2 { font-size: 1.8rem; color: #333; margin-bottom: 1rem; }
-    section.form-section p { color: #555; max-width: 600px; margin: 0 auto 2rem; font-size: 1rem; }
-    iframe { width: 100%; min-height: 600px; border: none; border-radius: 12px; }
+    section.trust { text-align: center; padding: 4rem 2rem; background: linear-gradient(180deg, #f6edff, #fafafa); }
+    .trust h2 { font-size: 2rem; color: #333; margin-bottom: 2rem; }
+    .trust-stats { display: flex; flex-wrap: wrap; justify-content: center; gap: 2rem; }
+    .stat { background: #fff; border-radius: 16px; padding: 2rem; width: 260px; box-shadow: 0 6px 16px rgba(0,0,0,0.05); }
+    .stat h3 { font-size: 1.5rem; color: #FF6F61; margin: 0 0 0.5rem; }
+    .stat p { color: #555; font-size: 0.95rem; margin: 0; }
 
-    /* ===== FOOTER ===== */
+    .form-popup { display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.6); backdrop-filter: blur(4px); align-items: center; justify-content: center; z-index: 1000; }
+    .form-popup.active { display: flex; animation: fadeIn 0.5s ease; }
+    .form-container { background: #fff; border-radius: 20px; width: 90%; max-width: 500px; overflow: hidden; box-shadow: 0 10px 30px rgba(0,0,0,0.2); border: 3px solid; border-image: linear-gradient(135deg, #56CCF2, #FF6F61) 1; }
+    .form-header { background: linear-gradient(135deg, #56CCF2, #FF6F61); color: #fff; padding: 1.2rem; text-align: center; font-size: 1.3rem; font-weight: 600; }
+    .form-body iframe { width: 100%; height: 500px; border: none; }
+    .close-btn { position: absolute; top: 20px; right: 30px; font-size: 1.8rem; color: #fff; cursor: pointer; transition: 0.3s; }
+    .close-btn:hover { color: #FF9A8B; }
+
     footer { text-align: center; background: #111; color: #ccc; padding: 2rem 1rem; font-size: 0.9rem; }
     footer a { color: #8ea8ff; text-decoration: none; }
     footer a:hover { text-decoration: underline; }
-    .social-links { margin-top: 1rem; }
-    .social-links a { margin: 0 10px; color: #8ea8ff; font-weight: 600; }
 
+    @keyframes fadeIn { from { opacity: 0; } to { opacity: 1; } }
     @media (max-width: 768px) {
       header h1 { font-size: 2rem; }
       .cta-btn { width: 80%; }
+      .stat { width: 80%; }
     }
   </style>
 </head>
 <body>
   <header>
-    <h1>Start Working Online with Myle Community 🚀</h1>
-    <p>Learn. Work. Grow. Join India’s Fastest-Growing Student Community for Online Work.</p>
-    <button class="cta-btn" onclick="document.getElementById('form').scrollIntoView({behavior:'smooth'});">Get Details</button>
+    <h1>Know How Students Are Building Their First Online Income with Myle Community 💡</h1>
+    <p>Learn, grow and explore genuine online opportunities trusted by students nationwide.</p>
+    <button class="cta-btn" onclick="togglePopup()">Get All Details</button>
   </header>
+
+  <section class="trust">
+    <h2>Built by Students. Trusted Across India.</h2>
+    <div class="trust-stats">
+      <div class="stat">
+        <h3>10k+</h3>
+        <p>Students have achieved their first online income milestone with Myle.</p>
+      </div>
+      <div class="stat">
+        <h3>19+</h3>
+        <p>States across India with active learners and growing communities.</p>
+      </div>
+      <div class="stat">
+        <h3>Thousands</h3>
+        <p>Join every day to explore new ways of digital growth and success.</p>
+      </div>
+    </div>
+    <button class="cta-btn" style="margin-top: 2.5rem;" onclick="togglePopup()">Get All Details</button>
+  </section>
 
   <section class="benefits">
     <div class="benefit">
-      <img src="https://www.svgrepo.com/show/530484/laptop.svg" alt="Work Anywhere" loading="lazy" />
+      <img src="https://www.svgrepo.com/show/530484/laptop.svg" alt="Work Anywhere" />
       <h3>Work Anywhere</h3>
-      <p>Flexible opportunities you can manage from your laptop or phone, at your own time and pace.</p>
+      <p>Flexible opportunities to work from laptop or phone, wherever you are.</p>
+      <button class="cta-btn" style="margin-top: 1.2rem;" onclick="togglePopup()">Get All Details</button>
     </div>
     <div class="benefit">
-      <img src="https://www.svgrepo.com/show/532141/learning.svg" alt="Learn Skills" loading="lazy" />
+      <img src="https://www.svgrepo.com/show/532141/learning.svg" alt="Learn Skills" />
       <h3>Learn & Grow</h3>
-      <p>Develop practical digital skills that help you earn and build your online presence for the future.</p>
+      <p>Develop real-world digital skills and start your journey toward online income.</p>
+      <button class="cta-btn" style="margin-top: 1.2rem;" onclick="togglePopup()">Get All Details</button>
     </div>
     <div class="benefit">
-      <img src="https://www.svgrepo.com/show/530456/community.svg" alt="Mentorship" loading="lazy" />
-      <h3>Mentorship & Support</h3>
-      <p>Join a community that guides you through every step of your online career journey.</p>
+      <img src="https://www.svgrepo.com/show/530456/community.svg" alt="Community" />
+      <h3>Guidance & Support</h3>
+      <p>Learn from a supportive network of peers and mentors who help you start right.</p>
+      <button class="cta-btn" style="margin-top: 1.2rem;" onclick="togglePopup()">Get All Details</button>
     </div>
   </section>
 
-  <section id="form" class="form-section">
-    <h2>Get Complete Details</h2>
-    <p>Fill out the form below and our team will reach out with personalized guidance on how to start your online journey with Myle Community.</p>
-    <iframe aria-label="Let's Work with MYLE Community 🚀" src="https://forms.mylecommunity.in/myle/form/CopyLetsWorkwithMYLECommunity/formperma/ZlYN-IAQH0qp87lh1672fU_wKykKqtkWMJsEupWEWJQ" loading="lazy"></iframe>
-  </section>
+  <div class="form-popup" id="formPopup">
+    <div class="form-container">
+      <div class="form-header">Get All Details 💡</div>
+      <div class="form-body">
+        <iframe src="https://forms.mylecommunity.in/myle/form/CopyLetsWorkwithMYLECommunity/formperma/ZlYN-IAQH0qp87lh1672fU_wKykKqtkWMJsEupWEWJQ" loading="lazy"></iframe>
+      </div>
+    </div>
+    <div class="close-btn" onclick="togglePopup()">×</div>
+  </div>
 
   <footer>
-    <p>© 2025 Myle Community | All Rights Reserved</p>
+    <p>Myle Community is a verified digital education initiative.</p>
     <p>Contact: <a href="mailto:support@mylecommunity.in">support@mylecommunity.in</a></p>
-    <div class="social-links">
+    <p>
       <a href="https://www.instagram.com/myle_community/" target="_blank">@myle_community</a> |
       <a href="https://www.instagram.com/karanveersingh_24/" target="_blank">@karanveersingh_24</a>
-    </div>
+    </p>
     <p><a href="https://mylecommunity.in/privacy">Privacy Policy</a></p>
   </footer>
+
+  <script>
+    function togglePopup() {
+      const popup = document.getElementById('formPopup');
+      popup.classList.toggle('active');
+    }
+  </script>
 </body>
 </html>
